--- a/EFI/OC/Kexts/Ath3kBT.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/Ath3kBT.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>19G73</string>
+	<string>19A583</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -17,27 +17,27 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.0</string>
+	<string>1.1.0</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.0.0</string>
+	<string>1.1.0</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>11E708</string>
+	<string>11A420a</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>19G68</string>
+	<string>16C58</string>
 	<key>DTSDKName</key>
-	<string>macosx10.15</string>
+	<string>macosx10.12</string>
 	<key>DTXcode</key>
-	<string>1160</string>
+	<string>1100</string>
 	<key>DTXcodeBuild</key>
-	<string>11E708</string>
+	<string>11A420a</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>0489_E036</key>
@@ -926,7 +926,7 @@
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.15</string>
+	<string>10.12</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2020 zxystd. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
