Update Opencore 0.7.0 to 0.7.1
OpenCore Update 0.7.0 to 0.7.1
Battery Percentage Status Algorithm Fix
Other Kext update

--- a/EFI/OC/Kexts/WifiLocFix.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/WifiLocFix.kext/Contents/Info.plist
@@ -31,9 +31,9 @@
 			<key>IOProviderMergeProperties</key>
 			<dict>
 				<key>IO80211CountryCode</key>
-				<string>US</string>
+				<string>IN</string>
 				<key>IO80211Locale</key>
-				<string>FCC</string>
+				<string>ETSI</string>
 			</dict>
 		</dict>
 	</dict>
